--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anime Gallery</title>
+    <title>Anime Verse</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Anime Gallery</h1>
-            <p>Explore the world of anime with our curated selection of popular titles!</p>
+            <h1>Welcome to anime Verse</h1>
         </header>
         <section class="anime-list">
             <article class="anime-item">
